--- a/tutorial/Fraga_Pinch_Method.ipynb
+++ b/tutorial/Fraga_Pinch_Method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "id": "35260901",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "id": "654c3471",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "id": "7abf524a",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "13           S32  cold                  30.641400   15.741638   80.000000   \n",
        "14           S37   hot                  79.933218   96.189753   80.000000   \n",
        "\n",
-       "       T_diff   Cp (kJ/kmol/K)  \n",
+       "        T_diff  Cp (kJ/kmol/K)  \n",
        "1   -56.209696      175.453272  \n",
        "2  -495.149629      226.374457  \n",
        "3  -600.000000       29.584853  \n",
@@ -238,7 +238,7 @@
        "14   16.189753      184.915226  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "id": "27c82fbc",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
     "\n",
     "D = []\n",
     "for i in range(1, l+1):\n",
-    "    x = df['Cp (kJ/kmol/K)'][i] * df['T_diff '][i] * df['Molar Flow Rate [kmol/hr]'][i] # Duty [KJ / hr]\n",
+    "    x = df['Cp (kJ/kmol/K)'][i] * df['T_diff'][i] * df['Molar Flow Rate [kmol/hr]'][i] # Duty [KJ / hr]\n",
     "    y = x / 360 # Duty [kW]\n",
     "    D.append(y)\n",
     "    \n",
@@ -268,7 +268,7 @@
     "\n",
     "F = []\n",
     "for i in range(1, l+1):\n",
-    "    x = D[i-1] / df['T_diff '][i] # Flux [kW / K]\n",
+    "    x = D[i-1] / df['T_diff'][i] # Flux [kW / K]\n",
     "    F.append(x)\n",
     "\n",
     "# print(F)\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 23,
    "id": "129d8e02",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
        "13           S32  cold                  30.641400   15.741638   80.000000   \n",
        "14           S37   hot                  79.933218   96.189753   80.000000   \n",
        "\n",
-       "       T_diff   Cp (kJ/kmol/K)      Duty [kW]  Flux [kW / K]  \n",
+       "        T_diff  Cp (kJ/kmol/K)      Duty [kW]  Flux [kW / K]  \n",
        "1   -56.209696      175.453272   -4454.378772      79.245737  \n",
        "2  -495.149629      226.374457  -96308.828121     194.504494  \n",
        "3  -600.000000       29.584853  -12622.870588      21.038118  \n",
@@ -533,7 +533,7 @@
        "14   16.189753      184.915226     664.718382      41.057970  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,10 +551,10 @@
     "\n",
     "We have 20 intervals: $Q_1, Q_2, \\dots , Q_{20}$\n",
     "\n",
-    "Let flux of stream i be denoted as $Fl_i$ $[\\frac{kW}{K}]$\n",
+    "Let flux of stream i be denoted as $Fl_i [\\frac{kW}{K}]$\n",
     "\n",
     "\n",
-    "Let the temperature change in interval $Q_j$ be $\\Delta T_{Q_j}$ $[K]$\n",
+    "Let the temperature change in interval $Q_j$ be $\\Delta T_{Q_j} [K]$\n",
     "\n",
     "$\n",
     "Q_j = \\sum_{i = 1}^{14} Fl_i \\cdot \\Delta T_{Q_j} \\cdot \\delta_{i, j} \n",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "id": "47b24f1d",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "id": "a51b7674",
    "metadata": {},
    "outputs": [],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 26,
    "id": "99e6a055",
    "metadata": {},
    "outputs": [],
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 27,
    "id": "6059d7aa",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
        " 20: [4]}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 28,
    "id": "9c6b22a9",
    "metadata": {},
    "outputs": [],
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 29,
    "id": "9f3ab0e8",
    "metadata": {},
    "outputs": [],
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 30,
    "id": "e3dcdd35",
    "metadata": {},
    "outputs": [],
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 31,
    "id": "31ae72c0",
    "metadata": {},
    "outputs": [],
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 32,
    "id": "a036eb8c",
    "metadata": {},
    "outputs": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 33,
    "id": "256609d4",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
        " 20: 1694.397870358}"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 34,
    "id": "86c887e0",
    "metadata": {},
    "outputs": [],
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 35,
    "id": "ff34119f",
    "metadata": {},
    "outputs": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 36,
    "id": "20d8c04f",
    "metadata": {},
    "outputs": [],
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 37,
    "id": "05093a6f",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1091,7 @@
        "20        20       1694.397870"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 38,
    "id": "f1c1c810",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 39,
    "id": "9c2945ba",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1310,7 @@
        "20        20       1694.397870            Surplus"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 40,
    "id": "6239ddcf",
    "metadata": {},
    "outputs": [
@@ -1489,7 +1489,7 @@
        "20        20       1694.397870            Surplus              7887.271912"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 41,
    "id": "f4dea199",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 42,
    "id": "60f2862b",
    "metadata": {},
    "outputs": [
@@ -1582,7 +1582,7 @@
        " 20: 1694.397870358}"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 43,
    "id": "02d46569",
    "metadata": {},
    "outputs": [
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 59,
    "id": "2e7216a3",
    "metadata": {},
    "outputs": [
@@ -1646,19 +1646,21 @@
        " 20: 0}"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate Hj_hot values\n",
-    "Hj_cd_results = calculate_Hj_cold(df['Flux [kW / K]'], temp_differences_intervals, new_streams_in_intervals)Hj_cd_results"
+    "Hj_cd_results = calculate_Hj_cold(df['Flux [kW / K]'], temp_differences_intervals, new_streams_in_intervals)\n",
+    "\n",
+    "Hj_cd_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 60,
    "id": "7d759b98",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1818,7 @@
        "20        20   1694.397870"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 61,
    "id": "03cb49bb",
    "metadata": {},
    "outputs": [
@@ -1998,7 +2000,7 @@
        "20         1      0.000000"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2009,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 62,
    "id": "75696b68",
    "metadata": {},
    "outputs": [],
@@ -2033,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 63,
    "id": "9a17c54a",
    "metadata": {},
    "outputs": [],
@@ -2050,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 64,
    "id": "6fbcba0a",
    "metadata": {},
    "outputs": [
@@ -2236,7 +2238,7 @@
        "21  20      0.000000  630.00"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2247,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 65,
    "id": "e4d1f2b6",
    "metadata": {},
    "outputs": [],
@@ -2257,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 66,
    "id": "c58fa7ef",
    "metadata": {},
    "outputs": [
@@ -2465,7 +2467,7 @@
        "21  20      0.000000  630.00             60492.283072"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,17 +2495,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "6dc376cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7887.271912"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "7887.271912"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 68,
    "id": "6b677396",
    "metadata": {},
    "outputs": [
@@ -2661,7 +2674,7 @@
        "20        20      0.000000"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2685,7 +2698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 69,
    "id": "477eb735",
    "metadata": {},
    "outputs": [
@@ -2843,7 +2856,7 @@
        "20         1   2155.426117"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2854,7 +2867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 70,
    "id": "b59a423e",
    "metadata": {},
    "outputs": [],
@@ -2868,7 +2881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 71,
    "id": "1a317316",
    "metadata": {},
    "outputs": [],
@@ -2885,7 +2898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 72,
    "id": "5aa02217",
    "metadata": {},
    "outputs": [
@@ -3071,7 +3084,7 @@
        "21  20   2155.426117  620.00"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3082,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 73,
    "id": "5119e586",
    "metadata": {},
    "outputs": [],
@@ -3092,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 74,
    "id": "2294368a",
    "metadata": {},
    "outputs": [
@@ -3300,7 +3313,7 @@
        "21  20   2155.426117  620.00             66822.190516"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3311,7 +3324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 75,
    "id": "45816b2f",
    "metadata": {},
    "outputs": [
@@ -3360,6 +3373,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6f3bce70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dce7a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05e84eb0",
    "metadata": {},
    "outputs": [],
    "source": []
