--- a/tutorial/PinchTutorial_Debug.ipynb
+++ b/tutorial/PinchTutorial_Debug.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PyPinch import PyPinch"
+    "from PyPinch import PyPinch\n"
    ]
   },
   {
@@ -77,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "options = {'debug'}\n",
-    "pinch = PyPinch('./streams/AEStreamTable1.csv', options)"
+    "pinch = PyPinch('./streams/SepAndProducingCHB.csv', options)"
    ]
   },
   {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -108,43 +108,19 @@
      "text": [
       "\n",
       "Streams: \n",
-      "{'type': 'COLD', 'cp': 175.453272, 'ts': 93.790304, 'tt': 150.0, 'ss': 93.790304, 'st': 150.0}\n",
-      "{'type': 'COLD', 'cp': 226.374457, 'ts': 124.850263, 'tt': 619.999892, 'ss': 124.850263, 'st': 619.999892}\n",
-      "{'type': 'COLD', 'cp': 29.584853, 'ts': 20.0, 'tt': 620.0, 'ss': 20.0, 'st': 620.0}\n",
-      "{'type': 'HOT', 'cp': 124.0, 'ts': 620.0, 'tt': 2.0, 'ss': 620.0, 'st': 2.0}\n",
-      "{'type': 'COLD', 'cp': 150.560459, 'ts': 0.547123, 'tt': 150.0, 'ss': 0.547123, 'st': 150.0}\n",
-      "{'type': 'COLD', 'cp': 29.089416, 'ts': 20.0, 'tt': 150.0, 'ss': 20.0, 'st': 150.0}\n",
-      "{'type': 'HOT', 'cp': 139.855395, 'ts': 150.0, 'tt': 25.0, 'ss': 150.0, 'st': 25.0}\n",
-      "{'type': 'HOT', 'cp': 149.396949, 'ts': 25.0, 'tt': 23.100976, 'ss': 25.0, 'st': 23.100976}\n",
-      "{'type': 'COLD', 'cp': 29.392114, 'ts': 24.999994, 'tt': 150.0, 'ss': 24.999994, 'st': 150.0}\n",
-      "{'type': 'COLD', 'cp': 199.685133, 'ts': 20.0, 'tt': 100.0, 'ss': 20.0, 'st': 100.0}\n",
-      "{'type': 'COLD', 'cp': 109.971456, 'ts': 56.389812, 'tt': 96.018129, 'ss': 56.389812, 'st': 96.018129}\n",
-      "{'type': 'COLD', 'cp': 175.036024, 'ts': 61.796286, 'tt': 80.0, 'ss': 61.796286, 'st': 80.0}\n",
-      "{'type': 'COLD', 'cp': 142.980199, 'ts': 15.741638, 'tt': 80.0, 'ss': 15.741638, 'st': 80.0}\n",
-      "{'type': 'HOT', 'cp': 184.915226, 'ts': 96.189753, 'tt': 80.0, 'ss': 96.189753, 'st': 80.0}\n",
+      "{'type': 'HOT', 'cp': 13.073842, 'ts': 191.510967, 'tt': 100.0, 'ss': 191.510967, 'st': 100.0}\n",
+      "{'type': 'COLD', 'cp': 4.007534, 'ts': 19.064709, 'tt': 80.0, 'ss': 19.064709, 'st': 80.0}\n",
+      "{'type': 'COLD', 'cp': 6.162828, 'ts': 64.353181, 'tt': 80.0, 'ss': 64.353181, 'st': 80.0}\n",
+      "{'type': 'HOT', 'cp': 4.858099, 'ts': 97.219482, 'tt': 80.0, 'ss': 97.219482, 'st': 80.0}\n",
       "Tmin = 10.0\n",
       "\n",
       "Temperature Intervals: \n",
-      "Interval 0 : {'t1': 630.0, 't2': 620.0, 'streamNumbers': []}\n",
-      "Interval 1 : {'t1': 620.0, 't2': 619.999892, 'streamNumbers': [2, 3]}\n",
-      "Interval 2 : {'t1': 619.999892, 't2': 160.0, 'streamNumbers': [1, 2, 3]}\n",
-      "Interval 3 : {'t1': 160.0, 't2': 150.0, 'streamNumbers': [1, 2, 3]}\n",
-      "Interval 4 : {'t1': 150.0, 't2': 124.850263, 'streamNumbers': [0, 1, 2, 3, 4, 5, 6, 8]}\n",
-      "Interval 5 : {'t1': 124.850263, 't2': 106.189753, 'streamNumbers': [0, 2, 3, 4, 5, 6, 8]}\n",
-      "Interval 6 : {'t1': 106.189753, 't2': 100.0, 'streamNumbers': [0, 2, 3, 4, 5, 6, 8]}\n",
-      "Interval 7 : {'t1': 100.0, 't2': 96.018129, 'streamNumbers': [0, 2, 3, 4, 5, 6, 8, 9]}\n",
-      "Interval 8 : {'t1': 96.018129, 't2': 93.790304, 'streamNumbers': [0, 2, 3, 4, 5, 6, 8, 9, 10, 13]}\n",
-      "Interval 9 : {'t1': 93.790304, 't2': 90.0, 'streamNumbers': [2, 3, 4, 5, 6, 8, 9, 10, 13]}\n",
-      "Interval 10 : {'t1': 90.0, 't2': 80.0, 'streamNumbers': [2, 3, 4, 5, 6, 8, 9, 10, 13]}\n",
-      "Interval 11 : {'t1': 80.0, 't2': 61.796286, 'streamNumbers': [2, 3, 4, 5, 6, 8, 9, 10, 11, 12]}\n",
-      "Interval 12 : {'t1': 61.796286, 't2': 56.389812, 'streamNumbers': [2, 3, 4, 5, 6, 8, 9, 10, 12]}\n",
-      "Interval 13 : {'t1': 56.389812, 't2': 35.0, 'streamNumbers': [2, 3, 4, 5, 6, 8, 9, 12]}\n",
-      "Interval 14 : {'t1': 35.0, 't2': 33.100976, 'streamNumbers': [2, 3, 4, 5, 6, 8, 9, 12]}\n",
-      "Interval 15 : {'t1': 33.100976, 't2': 24.999994, 'streamNumbers': [2, 3, 4, 5, 8, 9, 12]}\n",
-      "Interval 16 : {'t1': 24.999994, 't2': 20.0, 'streamNumbers': [2, 3, 4, 5, 9, 12]}\n",
-      "Interval 17 : {'t1': 20.0, 't2': 15.741638, 'streamNumbers': [3, 4, 12]}\n",
-      "Interval 18 : {'t1': 15.741638, 't2': 12.0, 'streamNumbers': [3, 4]}\n",
-      "Interval 19 : {'t1': 12.0, 't2': 0.547123, 'streamNumbers': [4]}\n"
+      "Interval 0 : {'t1': 201.510967, 't2': 110.0, 'streamNumbers': []}\n",
+      "Interval 1 : {'t1': 110.0, 't2': 107.219482, 'streamNumbers': [0]}\n",
+      "Interval 2 : {'t1': 107.219482, 't2': 90.0, 'streamNumbers': []}\n",
+      "Interval 3 : {'t1': 90.0, 't2': 80.0, 'streamNumbers': [3]}\n",
+      "Interval 4 : {'t1': 80.0, 't2': 64.353181, 'streamNumbers': [1, 2]}\n",
+      "Interval 5 : {'t1': 64.353181, 't2': 19.064709, 'streamNumbers': [1]}\n"
      ]
     }
    ],
@@ -169,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -178,26 +154,12 @@
      "text": [
       "\n",
       "Problem Table: \n",
-      "Interval 0 : {'deltaS': 10.0, 'deltaCP': 0, 'deltaH': 0.0}\n",
-      "Interval 1 : {'deltaS': 0.00010799999995469989, 'deltaCP': 94.415147, 'deltaH': 0.010196835871722983}\n",
-      "Interval 2 : {'deltaS': 459.99989200000005, 'deltaCP': -131.95931000000002, 'deltaH': -60701.26834839454}\n",
-      "Interval 3 : {'deltaS': 10.0, 'deltaCP': -131.95931000000002, 'deltaH': -1319.5931}\n",
-      "Interval 4 : {'deltaS': 25.149737000000002, 'deltaCP': -376.599176, 'deltaH': -9471.370230816712}\n",
-      "Interval 5 : {'deltaS': 18.660510000000002, 'deltaCP': -150.224719, 'deltaH': -2803.26987114669}\n",
-      "Interval 6 : {'deltaS': 6.189752999999996, 'deltaCP': -150.224719, 'deltaH': -929.8539051044064}\n",
-      "Interval 7 : {'deltaS': 3.981870999999998, 'deltaCP': -349.909852, 'deltaH': -1393.2958922930914}\n",
-      "Interval 8 : {'deltaS': 2.2278249999999957, 'deltaCP': -274.96608200000003, 'deltaH': -612.5763116316489}\n",
-      "Interval 9 : {'deltaS': 3.790304000000006, 'deltaCP': -99.51281000000003, 'deltaH': -377.1838017942407}\n",
-      "Interval 10 : {'deltaS': 10.0, 'deltaCP': -99.51281000000003, 'deltaH': -995.1281000000004}\n",
-      "Interval 11 : {'deltaS': 18.203713999999998, 'deltaCP': -602.444259, 'deltaH': -10966.722991777924}\n",
-      "Interval 12 : {'deltaS': 5.406474000000003, 'deltaCP': -427.408235, 'deltaH': -2310.771509913391}\n",
-      "Interval 13 : {'deltaS': 21.389812, 'deltaCP': -317.436779, 'deltaH': -6789.913024695547}\n",
-      "Interval 14 : {'deltaS': 1.8990239999999972, 'deltaCP': -317.436779, 'deltaH': -602.8200618036951}\n",
-      "Interval 15 : {'deltaS': 8.100982000000002, 'deltaCP': -457.29217400000005, 'deltaH': -3704.515670314869}\n",
-      "Interval 16 : {'deltaS': 4.999994000000001, 'deltaCP': -427.90006000000005, 'deltaH': -2139.4977325996406}\n",
-      "Interval 17 : {'deltaS': 4.258362, 'deltaCP': -169.540658, 'deltaH': -721.965495482196}\n",
-      "Interval 18 : {'deltaS': 3.741638, 'deltaCP': -26.56045900000001, 'deltaH': -99.37962269184203}\n",
-      "Interval 19 : {'deltaS': 11.452877, 'deltaCP': -150.560459, 'deltaH': -1724.3504179905433}\n"
+      "Interval 0 : {'deltaS': 91.510967, 'deltaCP': 0, 'deltaH': 0.0}\n",
+      "Interval 1 : {'deltaS': 2.7805180000000007, 'deltaCP': 13.073842, 'deltaH': 36.35205301015601}\n",
+      "Interval 2 : {'deltaS': 17.219482, 'deltaCP': 0, 'deltaH': 0.0}\n",
+      "Interval 3 : {'deltaS': 10.0, 'deltaCP': 4.858099, 'deltaH': 48.58099}\n",
+      "Interval 4 : {'deltaS': 15.646818999999994, 'deltaCP': -10.170362, 'deltaH': -159.13381337847795}\n",
+      "Interval 5 : {'deltaS': 45.288472000000006, 'deltaCP': -4.007534, 'deltaH': -181.49509134804802}\n"
      ]
     }
    ],
@@ -217,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -227,51 +189,23 @@
       "\n",
       "Unfeasible Heat Cascade: \n",
       "Interval 0 : {'deltaH': 0.0, 'exitH': 0.0}\n",
-      "Interval 1 : {'deltaH': 0.010196835871722983, 'exitH': 0.010196835871722983}\n",
-      "Interval 2 : {'deltaH': -60701.26834839454, 'exitH': -60701.258151558664}\n",
-      "Interval 3 : {'deltaH': -1319.5931, 'exitH': -62020.85125155866}\n",
-      "Interval 4 : {'deltaH': -9471.370230816712, 'exitH': -71492.22148237537}\n",
-      "Interval 5 : {'deltaH': -2803.26987114669, 'exitH': -74295.49135352207}\n",
-      "Interval 6 : {'deltaH': -929.8539051044064, 'exitH': -75225.34525862648}\n",
-      "Interval 7 : {'deltaH': -1393.2958922930914, 'exitH': -76618.64115091956}\n",
-      "Interval 8 : {'deltaH': -612.5763116316489, 'exitH': -77231.21746255121}\n",
-      "Interval 9 : {'deltaH': -377.1838017942407, 'exitH': -77608.40126434545}\n",
-      "Interval 10 : {'deltaH': -995.1281000000004, 'exitH': -78603.52936434545}\n",
-      "Interval 11 : {'deltaH': -10966.722991777924, 'exitH': -89570.25235612337}\n",
-      "Interval 12 : {'deltaH': -2310.771509913391, 'exitH': -91881.02386603676}\n",
-      "Interval 13 : {'deltaH': -6789.913024695547, 'exitH': -98670.93689073231}\n",
-      "Interval 14 : {'deltaH': -602.8200618036951, 'exitH': -99273.756952536}\n",
-      "Interval 15 : {'deltaH': -3704.515670314869, 'exitH': -102978.27262285087}\n",
-      "Interval 16 : {'deltaH': -2139.4977325996406, 'exitH': -105117.77035545051}\n",
-      "Interval 17 : {'deltaH': -721.965495482196, 'exitH': -105839.7358509327}\n",
-      "Interval 18 : {'deltaH': -99.37962269184203, 'exitH': -105939.11547362454}\n",
-      "Interval 19 : {'deltaH': -1724.3504179905433, 'exitH': -107663.46589161508}\n",
+      "Interval 1 : {'deltaH': 36.35205301015601, 'exitH': 36.35205301015601}\n",
+      "Interval 2 : {'deltaH': 0.0, 'exitH': 36.35205301015601}\n",
+      "Interval 3 : {'deltaH': 48.58099, 'exitH': 84.93304301015601}\n",
+      "Interval 4 : {'deltaH': -159.13381337847795, 'exitH': -74.20077036832194}\n",
+      "Interval 5 : {'deltaH': -181.49509134804802, 'exitH': -255.69586171636996}\n",
       "\n",
       "Feasible Heat Cascade: \n",
-      "Interval 0 : {'deltaH': 0.0, 'exitH': 107663.46589161508}\n",
-      "Interval 1 : {'deltaH': 0.010196835871722983, 'exitH': 107663.47608845095}\n",
-      "Interval 2 : {'deltaH': -60701.26834839454, 'exitH': 46962.20774005641}\n",
-      "Interval 3 : {'deltaH': -1319.5931, 'exitH': 45642.61464005641}\n",
-      "Interval 4 : {'deltaH': -9471.370230816712, 'exitH': 36171.2444092397}\n",
-      "Interval 5 : {'deltaH': -2803.26987114669, 'exitH': 33367.97453809301}\n",
-      "Interval 6 : {'deltaH': -929.8539051044064, 'exitH': 32438.120632988604}\n",
-      "Interval 7 : {'deltaH': -1393.2958922930914, 'exitH': 31044.824740695512}\n",
-      "Interval 8 : {'deltaH': -612.5763116316489, 'exitH': 30432.248429063864}\n",
-      "Interval 9 : {'deltaH': -377.1838017942407, 'exitH': 30055.064627269625}\n",
-      "Interval 10 : {'deltaH': -995.1281000000004, 'exitH': 29059.936527269623}\n",
-      "Interval 11 : {'deltaH': -10966.722991777924, 'exitH': 18093.213535491697}\n",
-      "Interval 12 : {'deltaH': -2310.771509913391, 'exitH': 15782.442025578306}\n",
-      "Interval 13 : {'deltaH': -6789.913024695547, 'exitH': 8992.529000882758}\n",
-      "Interval 14 : {'deltaH': -602.8200618036951, 'exitH': 8389.708939079062}\n",
-      "Interval 15 : {'deltaH': -3704.515670314869, 'exitH': 4685.193268764193}\n",
-      "Interval 16 : {'deltaH': -2139.4977325996406, 'exitH': 2545.6955361645523}\n",
-      "Interval 17 : {'deltaH': -721.965495482196, 'exitH': 1823.7300406823563}\n",
-      "Interval 18 : {'deltaH': -99.37962269184203, 'exitH': 1724.3504179905142}\n",
-      "Interval 19 : {'deltaH': -1724.3504179905433, 'exitH': -2.9103830456733704e-11}\n",
+      "Interval 0 : {'deltaH': 0.0, 'exitH': 255.69586171636996}\n",
+      "Interval 1 : {'deltaH': 36.35205301015601, 'exitH': 292.04791472652596}\n",
+      "Interval 2 : {'deltaH': 0.0, 'exitH': 292.04791472652596}\n",
+      "Interval 3 : {'deltaH': 48.58099, 'exitH': 340.62890472652595}\n",
+      "Interval 4 : {'deltaH': -159.13381337847795, 'exitH': 181.495091348048}\n",
+      "Interval 5 : {'deltaH': -181.49509134804802, 'exitH': -2.842170943040401e-14}\n",
       "\n",
-      "Pinch Temperature (degC): 0.547123\n",
-      "Minimum Hot Utility (kW): 107663.46589161508\n",
-      "Minimum Cold Utility (kW): -2.9103830456733704e-11\n"
+      "Pinch Temperature (degC): 19.064709\n",
+      "Minimum Hot Utility (kW): 255.69586171636996\n",
+      "Minimum Cold Utility (kW): -2.842170943040401e-14\n"
      ]
     }
    ],
@@ -299,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -308,14 +242,14 @@
      "text": [
       "\n",
       "Shifted Composite Diagram Values: \n",
-      "DeltaH Hot: [0.0, 528.036888, 248.0, 371.9992560000001, 2244.521768, 501.06772763447924, 3005.2633442357396, 1426.5273328272308, 4803.1481479370295, 6188.683289858787, 999.782408729323, 1050.6381455440444, 4271.753672767434, 2285.1222869514504, 6635.893790281115, 2480.0, 55799.98660800001, 0.013391999994382786, 0.0]\n",
-      "DeltaH Cold: [2287.693152682385, 1250.0023834821961, 1103.80012, 1655.6968685996408, 10521.95917831487, 1103.8877894381744, 6620.808578931288, 3737.298842740622, 15769.871139714955, 7560.995191653028, 1612.358720360972, 2443.934037837136, 6703.85476787184, 3586.144968098141, 16107.264021097828, 5119.1862, 115181.66185639454, 0.003195164122659803, 0.0]\n",
+      "DeltaH Hot: [0.0, 0.0, 48.58099, 0.0, 36.35205301015601, 0.0]\n",
+      "DeltaH Cold: [181.49509134804802, 159.13381337847795, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "Hot H: [0.0, 528.036888, 776.036888, 1148.0361440000001, 3392.557912, 3893.6256396344793, 6898.888983870219, 8325.41631669745, 13128.56446463448, 19317.24775449327, 20317.030163222593, 21367.66830876664, 25639.421981534073, 27924.544268485522, 34560.43805876664, 37040.43805876664, 92840.42466676664, 92840.43805876664]\n",
-      "Hot T: [0.547123, 20.0, 22.0, 24.999994, 43.100976, 45.0, 56.389812, 61.796286, 80.0, 93.790304, 96.018129, 100.0, 116.189753, 124.850263, 150.0, 170.0, 619.999892, 620.0]\n",
+      "Hot H: [0.0, 48.58099, 84.93304301015601]\n",
+      "Hot T: [19.064709, 90.0, 110.0]\n",
       "\n",
-      "Cold H: [-3.1377567211166024e-11, 2287.6931526823537, 3537.6955361645496, 4641.4956561645495, 6297.19252476419, 16819.15170307906, 17923.039492517233, 24543.84807144852, 28281.146914189143, 44051.018053904096, 51612.01324555712, 53224.37196591809, 55668.30600375523, 62372.16077162707, 65958.30573972521, 82065.56976082304, 87184.75596082304, 202366.4178172176, 202366.4210123817]\n",
-      "Cold T: [0.547123, 15.741638, 20.0, 22.0, 24.999994, 43.100976, 45.0, 56.389812, 61.796286, 80.0, 93.790304, 96.018129, 100.0, 116.189753, 124.850263, 150.0, 170.0, 619.999892, 620.0]\n"
+      "Cold H: [-2.842170943040401e-14, 181.495091348048, 340.62890472652595]\n",
+      "Cold T: [19.064709, 64.353181, 80.0]\n"
      ]
     }
    ],
@@ -333,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -365,8 +299,8 @@
      "text": [
       "\n",
       "Grand Composite Curve: \n",
-      "Net H (kW): [107663.46589161508, 107663.46589161508, 107663.47608845095, 46962.20774005641, 45642.61464005641, 36171.2444092397, 33367.97453809301, 32438.120632988604, 31044.824740695512, 30432.248429063864, 30055.064627269625, 29059.936527269623, 18093.213535491697, 15782.442025578306, 8992.529000882758, 8389.708939079062, 4685.193268764193, 2545.6955361645523, 1823.7300406823563, 1724.3504179905142, -2.9103830456733704e-11]\n",
-      "T (degC): [630.0, 620.0, 619.999892, 160.0, 150.0, 124.850263, 106.189753, 100.0, 96.018129, 93.790304, 90.0, 80.0, 61.796286, 56.389812, 35.0, 33.100976, 24.999994, 20.0, 15.741638, 12.0, 0.547123]\n"
+      "Net H (kW): [255.69586171636996, 255.69586171636996, 292.04791472652596, 292.04791472652596, 340.62890472652595, 181.495091348048, -2.842170943040401e-14]\n",
+      "T (degC): [201.510967, 110.0, 107.219482, 90.0, 80.0, 64.353181, 19.064709]\n"
      ]
     }
    ],
@@ -385,6 +319,13 @@
     "\n",
     "If _energy relaxation_ is allowed (heat exchange over the Pinch Point), another Heat Exchanger network could be constructed which would reduce the number of heat exchanger units (and hence the Capital Cost) at the expense of larger Hot and Cold Utilities (and hence Running Costs). This reduction is only possible when there is a heat exchange loop over the Pinch.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
